--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
+    "vue-echarts": "^7.0.3",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.12"
   },
